# mirall

./: CMakeLists.txt
cmake/modules/: FindINotify.cmake
doc/: Makefile
src/: CMakeLists.txt
src/libsync/: CMakeLists.txt
src/mirall/: application.cpp  application.h  csyncfolder.cpp  folderman.cpp  mirallconfigfile.cpp  mirallconfigfile.h  owncloudfolder.cpp  owncloudinfo.cpp  owncloudinfo.h
src/plasma/: CMakeLists.txt  owncloudsyncd.desktop  plasma-notes.txt  plasmoid  settings  syncd
src/plasma/applet/: CMakeLists.txt  owncloudapplet.cpp  owncloudapplet.h  plasma-applet-owncloud.desktop
src/plasma/applet/contents/ui/: OwncloudPlasmoid.qml
src/plasma/import/: CMakeLists.txt  owncloudimport.cpp  owncloudimport.h  qmldir
src/plasma/import/qml/: AddFolderButton.qml  AddSyncFolder.qml  Breadcrumbs.qml  DirPicker.qml  DirPickerDelegate.qml  DirectoryPicker.qml  ErrorHandler.qml  ExampleJob.qml  FadeAnimation.qml  FavoriteDelegate.qml  FavoritesWidget.qml  FolderDelegate.qml  FolderList.qml  LoginWidget.qml  MiniJobItem.qml  NavigationItem.qml  OwncloudSettingsModule.qml  ProgressItem.qml  RemoteFolderPicker.qml  SetupWizard.qml
src/plasma/kcmodule/: .kdev_include_paths  CMakeLists.txt  Messages.sh  kcmowncloud.cpp  kcmowncloud.h  owncloudconfig.cpp  owncloudconfig.desktop  owncloudconfig.h  owncloudconfig.ui  settings-synchronization.desktop
src/plasma/lib/: createfolderjob.cpp  createfolderjob.h  directorylister.cpp  directorylister.h  dirmodel.cpp  dirmodel.h  job.cpp  job.h  minijob.cpp  minijob.h  owncloudfolder.cpp  owncloudfolder.h  owncloudsettings.cpp  owncloudsettings.h  syncprogress.cpp  syncprogress.h
src/plasma/owncloudsync/: CMakeLists.txt  kfilesync.cpp  kfilesync.h  main.cpp  org.kde.owncloudsync.xml  owncloudsync.cpp  owncloudsync.desktop  owncloudsync.h  owncloudsyncdaemon.cpp  owncloudsyncdaemon.h
src/plasma/package/: metadata.desktop
src/plasma/package/contents/ui/: AddFolderButton.qml  AddSyncFolder.qml  Breadcrumbs.qml  DirPicker.qml  DirPickerDelegate  DirPickerDelegate.qml  DirectoryPicker.qml  ErrorHandler.qml  ExampleJob.qml  ExampleJobItem.qml  FadeAnimation.qml  FavoriteDelegate.qml  FavoritesWidget.qml  FolderDelegate.qml  FolderList.qml  LoginWidget.qml  MiniJobItem.qml  NavigationItem.qml  OwncloudPlasmoid.qml  OwncloudSettingsModule.qml  ProgressItem.qml  RemoteFolderPicker.qml  SetupWizard.qml
src/plasma/settingsmodule/: CMakeLists.txt  owncloudsettings.cpp  owncloudsettingsplugin.cpp  owncloudsettingsplugin.h
src/plasma/settingsmodule/package/: metadata.desktop
src/plasma/settingsmodule/package/contents/ui/: AddSyncFolder.qml  DirectoryPicker.qml  ErrorHandler.qml  FolderDelegate.qml  FolderList.qml  LoginWidget.qml  OwncloudPlasmoid.qml  OwncloudSettingsModule.qml
translations/: mirall_lb.ts
